GNOME Bugzilla – Bug 665000
St.Entry destroy send a warning about NULL pointer instance in log
Last modified: 2012-01-30 23:32:23 UTC
Created attachment 202266 [details] Backtraces of st_im_text behing disposed twice - second time with im_context null I set a breakpoint on st_im_context_dispose . It is called twice . Once by st_entry dispose and then by gjs gc as st_text_im_dispose unref and nullify its im_context (the im_context ref count stay at one anyway while the st_text_im one is at 5 ) the second call try to g_signal_handlers_disconnect_by_func (priv->im_context, while im_context is null
Created attachment 202267 [details] [review] st-im-text: Guard against multiple dispose This could cause warnings like "invalid (NULL) pointer instance"
Review of attachment 202267 [details] [review]: Looks good
Attachment 202267 [details] pushed as f6508b5 - st-im-text: Guard against multiple dispose